fix remote beans